deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-service
  namespace: mocks
  labels:
    app: mock-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-service
  template:
    metadata:
      labels:
        app: mock-service
        fargate: "yes"
    spec:
      restartPolicy: Always
      containers:
        - name: mock-service
          image: 616825170943.dkr.ecr.ap-south-1.amazonaws.com/mocks:latest
          imagePullPolicy: Always
          command: []
          args:
            - "sh scripts/start_server.sh"
          ports:
            - name: http-server
              containerPort: 8080
          resources:
            limits:
              cpu: "300m"
              memory: "1024Mi"
            requests:
              cpu: "300m"
              memory: "1024Mi"
