deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mocks-service
  namespace: mocks
spec:
  selector:
    app: mock-service
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
