deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mocks-service-ingress
  namespace: mocks
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: app-ingress-group
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:616825170943:certificate/4c3f7dea-5783-45b5-9edc-42016fe1de1d
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: "/_ping"
spec:
  ingressClassName: alb
  rules:
    - host: new-mocks.volopay.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mocks-service
                port:
                  number: 80
